bug fix: popup be covered at right side, parent window scroll

--- a/src/fg/css/client.css
+++ b/src/fg/css/client.css
@@ -1,13 +1,13 @@
 iframe#odh-popup {
     all: initial;
     background-color: #fff;
-    border: 1px solid #999;
+    border: 1px solid #666;
     box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    border-radius: 5px;
-    height: 240px;
+    border-radius: 3px;
+    height: 300px;
     position: fixed;
     resize: both;
     visibility: hidden;
-    width: 320px;
+    width: 400px;
     z-index: 2147483647;
 }  
